Complete fettucine alfredo recipe page
Added the necessary photo, ingredients list, and steps required to
complete the recipe page for Fettucine Alfredo.

--- a/recipes/fettucine.html
+++ b/recipes/fettucine.html
@@ -7,5 +7,40 @@
 
     <body>
         <h1>Fettucine Alfredo Recipe</h1>
+        <img src="https://images.themodernproper.com/billowy-turkey/production/posts/2023/Fettuccine-Alfredo_7.jpg?w=960&h=960&q=82&fm=jpg&fit=crop&dm=1681837453&s=23a70d4651a179aaf750a1446e22aad2" 
+        alt="A bowl of delicious fettucine alfredo" width="600" height="600">
+        <h3>Description</h3>
+            <p>The following recipe prepares one of the best Fettucine Alfredo dishes I've ever had after<strong> Del Taco's Taco flavored Fettucine Alfredo</strong>.</p>
+
+             <p>This recipe uses very simple ingredients to create an effective blend of herbs, spices, and cheese.  The quick turnaround time to prepare 
+            the dish ensures that you won't regret the time, <em>just the calories</em>!</p>
+        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>butter</li>
+            <li>parmesan cheese</li>
+            <li>garlic</li>
+            <li>heavy cream</li>
+            <li>salt</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>Start by bringing water to a boil in a large pot.</strong> Add salt to the water to season the pasta. 
+                Once it is boiling, add pasta and cook according to package instructions.</li>
+            <li><strong>Saute the garlic and butter together</strong> until softened — about 1 to 2 minutes.</li>
+            <li><strong>Add <em>heavy</em> cream</strong> and let simmer over medium-high heat for about 5 minutes to thicken. Add salt and pepper to taste. 
+                Add half of the parmesan cheese to the mixture and whisk well until smooth.</li>
+            <li><strong>Save some pasta water.</strong> The pasta water is full of flavor and can be used to thin out the sauce.</li>
+            <li><strong>Toss alfredo sauce with fettuccine pasta</strong> and add half of the parmesan cheese. Once it is tossed, garnish with the remaining parmesan cheese. 
+                Add a little pasta water if it needs to be thinned out.</li>
+            <li><strong>Garnish with Italian parsley,</strong> if so desired.</li>
+        </ol>
+
+        <h3>Source</h3>
+        <p>While this isn't required in the project, I would be remiss if I didn't mention the source for the recipe as it isn't my recipe.  Even in practice, its 
+            important to give credit where its due.</p>
+
+        <a href="https://www.modernhoney.com/fettuccine-alfredo/" target="_blank" rel="noopener noreferer">https://www.modernhoney.com/fettuccine-alfredo/</a>
     </body>
 </html>
