Finalize Cheeseburger page
Cheeseburger page needed more content in order to be a completed page.
Added an image, ingredients, and directions for making the perfect
hamburger.  I am now hungry.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <body>
         <h1>Odin Recipes</h1>
         <h2>Here are recipes for what are <strong><em>objectively</em></strong> the best dishes in the world!</h2>
-        <a href="./recipes/fettucine.html">Fettucine Alfredo</a>
+        <ul>
+            <li><a href="./recipes/fettucine.html">Fettucine Alfredo</a></li>
+            <li><a href="./recipes/cheeseburger.html">The Cheeseburger</a></li>
+        </ul>
+       
         
     </body>
 </html>
