--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -7,5 +7,29 @@
 
     <body>
         <h1>The Cheeseburger</h1>
+        <img src="../images/cheeseburger.jpeg" alt="A delicious cheeseburger!" width="1000" height="800">
+        <h3>Description</h3>
+        <p>This is it. An easy recipe for the classic cheeseburger.  If this was the only thing I could eat for the rest of my life,</p>
+        <p><strong><em>I would be fine</em></strong>.</p>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>The Beef</li>
+                <li>The Cheese</li>
+                <li>The Bun</li>
+                <li>The Green Stuff & Pickled Stuff</li>
+                <li>The Sauce</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Form patties</li>
+                <li>Dent your paty in the middle</li>
+                <li>Salt <em>JUST</em> before cooking</li>
+                <li>Cook each side for 1.5 minutes in the skillet</li>
+                <li>Top with cheese for another 1.5 minutes</li>
+                <li>Remove patties and toast buns</li>
+                <li>Assemble the burger with green ingredients and smear with sauce</li>
+            </ol>
+        <h3>Source</h3>
+        <a href="https://www.recipetineats.com/cheeseburger-recipe/" target="_blank" rel="noopener noreferer">https://www.recipetineats.com/cheeseburger-recipe/</a>
     </body>
 </html>
