--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/fettucine.html">Fettucine Alfredo</a></li>
             <li><a href="./recipes/cheeseburger.html">The Cheeseburger</a></li>
+            <li><a href="./recipes/fried_rice.html">Fried Rice</a></li>
         </ul>
        
         
