--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Homepage</a>
         <h1>The Cheeseburger</h1>
         <img src="../images/cheeseburger.jpeg" alt="A delicious cheeseburger!" width="1000" height="800">
         <h3>Description</h3>
