Add picture to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://cdn-media.threadless.com/submissions_wm/671730-2844ac15252e67e6ce48204665e779a6.jpg" alt="A picture of Where's Waldo" height="900" width="900">
         <h2>Here are recipes for what are <strong><em>objectively</em></strong> the best dishes in the world!</h2>
         <ul>
             <li><a href="./recipes/fettucine.html">Fettucine Alfredo</a></li>
