Add CSS Styling to Website
Added CSS stylesheet to the web pages to add fonts, background colors,
regular colors and more to the website.

--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>CHEESEBURGER!!</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -13,7 +14,7 @@
         <p>This is it. An easy recipe for the classic cheeseburger.  If this was the only thing I could eat for the rest of my life,</p>
         <p><strong><em>I would be fine</em></strong>.</p>
         <h3>Ingredients</h3>
-            <ul>
+            <ul class="ingredients">
                 <li>The Beef</li>
                 <li>The Cheese</li>
                 <li>The Bun</li>
