--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Fried Rice</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -17,7 +18,7 @@
             <p>Just <em>freakin fry</em> it and it'll be amazing.  See below instructions on frying it.</p>
 
         <h3>Ingredients</h3>
-            <ul>
+            <ul class="ingredients">
                 <li>Rice</li>
                 <li>eggs</li>
                 <li>baby carrots</li>
@@ -28,7 +29,7 @@
             </ul>
 
         <h3>Steps</h3>
-            <ol>
+            <ol id="fried_rice_steps">
                 <li>Assemble ingredients</li>
                 <li>Place carrots in a small saucepan and cover with water. Bring to a low boil and cook for 3 to 5 minutes. 
                     Stir in peas, then immediately drain in a colander. </li>
