--- a/recipes/fettucine.html
+++ b/recipes/fettucine.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Fettucine</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -17,7 +18,7 @@
             the dish ensures that you won't regret the time, <em>just the calories</em>!</p>
         
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>butter</li>
             <li>parmesan cheese</li>
             <li>garlic</li>
