--- a/recipes/fettucine.html
+++ b/recipes/fettucine.html
@@ -18,7 +18,7 @@
             the dish ensures that you won't regret the time, <em>just the calories</em>!</p>
         
         <h3>Ingredients</h3>
-        <ul class="ingredients">
+        <ul class="ingredients fettucine">
             <li>butter</li>
             <li>parmesan cheese</li>
             <li>garlic</li>
@@ -43,6 +43,8 @@
         <p>While this isn't required in the project, I would be remiss if I didn't mention the source for the recipe as it isn't my recipe.  Even in practice, its 
             important to give credit where its due.</p>
 
-        <a href="https://www.modernhoney.com/fettuccine-alfredo/" target="_blank" rel="noopener noreferer">https://www.modernhoney.com/fettuccine-alfredo/</a>
+        <div class="container">
+        <a class="source" href="https://www.modernhoney.com/fettuccine-alfredo/" target="_blank" rel="noopener noreferer">https://www.modernhoney.com/fettuccine-alfredo/</a>
+        </div>
     </body>
 </html>
