--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -24,7 +24,7 @@
                 <li>baby carrots</li>
                 <li>peas</li>
                 <li>soy sauce</li>
-                <li>2 tablespoons vegetable oil</li><p><strong>There's the oil!</strong></p>
+                <li>2 tablespoons vegetable oil</li><p><strong>(There's the oil!)</strong></p>
                 <li>2 teaspoons sesame oil</li><p>You can never go wrong with <em>more oil</em>.</p>
             </ul>
 
@@ -39,11 +39,14 @@
                 <li>Serve hot and enjoy! </li>
             </ol>
 
+        
         <h3>Source</h3>
         <p>Below is the source for where the recipe came from.  In fact you should just follow the recipe on the website.  Its more detailed for the instructions.  
             I'm just trying to create a website for an assignment man.  If I wanted to cook, then I wouldn't be making this website.  
         </p>
-        <a href="https://www.allrecipes.com/recipe/79543/fried-rice-restaurant-style/" target="_blank" rel="noopener noreferer">
+        <div class="container">
+        <a class="source" href="https://www.allrecipes.com/recipe/79543/fried-rice-restaurant-style/" target="_blank" rel="noopener noreferer">
             https://www.allrecipes.com/recipe/79543/fried-rice-restaurant-style/</a>
+        </div>
     </body>
 </html>
